2007-03-07 Erik Romijn <eromijn@ripe.net>
	* Built in TABLE_DUMP_V2 support
	* Rename ..MESSAGE32 to ..MESSAGE_AS4
	* Fixed bug where -M always crashed

2007-02-01 Erik Romijn <eromijn@ripe.net>
	* Minor fix in ASN32 support

2006-10-20 Lorenzo Colitti <lorenzo@ripe.net>
	* Implement ASN32 support

2005-11-08 Young Hyun <youngh@caida.org>
	* IPv6 prefixes were not printed properly by bgpdump.

2004-02-10 Lorenzo Colitti <lorenzo@ripe.net>
	* Fix a stupid crash when reading truncated prefixes.

2004-02-09 Lorenzo Colitti <lorenzo@ripe.net>
	* Decode unknown attributes properly.
	* Fix a crash when reading truncated prefixes.

2004-02-04 Hong-wei Kong  <hong-wei_kong@agilent.com>
        * Add a new option (-t dump|change) to bgpdump. If '-t dump' is 
	  specified, then the decoding result with '-m' / '-M' option will
	  show the timestamp when these routes are dumped. If '-t change' is
	  specified, then the decoding result with '-m' / '-M' option will
	  show the timestamp when the routes were last time changed. This 
	  option only works with routing table dumps.

2004-01-16 Lorenzo Colitti <lorenzo@ripe.net>
	* Fix compile errors under cygwin (only IPv4 works though)

2003-12-18 Hong-Wei Kong <hong-wei_kong@agilent.com>
	* Added support for dumping BGP routing table entries in
	  machine-readable format (-m). Previously -m was only supported
	  for BGP messages

2003-12-16 Shufu Mao <msf98@mails.tsinghua.edu.cn>
	* Revised the decoding of BGP routing table dump to make the result
	  identical to route_btoa

2003-12-15  Lorenzo Colitti <lorenzo@ripe.net>
	* Proper autoconf support: check for features instead of target
	  systems, remove extra .h files and only use configure.in, use
	  Makefile.in instead of Make.include, link both static and
	  shared library, check for ar and ranlib, etc.
	* Changed INET6 to BGPDUMP_HAVE_IPV6
	  (N.B. Docs are not updated yet)
	* Fixed possible endianness issues on Sparc.
	* Fixed a crash while decoding NOTIFICATION messages
