@@ -67,14 +67,18 @@ Original Author: Dan Ardelean (dan@ripe.net)
 #define BGPDUMP_SUBTYPE_MRTD_TABLE_DUMP_AFI_IP_32BIT_AS		3
 #define BGPDUMP_SUBTYPE_MRTD_TABLE_DUMP_AFI_IP6_32BIT_AS	4
 
-#define BGPDUMP_TYPE_TABLE_DUMP_V2                     13
-#define BGPDUMP_SUBTYPE_TABLE_DUMP_V2_PEER_INDEX_TABLE  1
-#define BGPDUMP_SUBTYPE_TABLE_DUMP_V2_IPV4_UNICAST      2
-#define BGPDUMP_SUBTYPE_TABLE_DUMP_V2_MULTIPROTOCOL     3
-#define BGPDUMP_PEERTYPE_TABLE_DUMP_V2_AFI_IP           0
-#define BGPDUMP_PEERTYPE_TABLE_DUMP_V2_AFI_IP6          1
-#define BGPDUMP_PEERTYPE_TABLE_DUMP_V2_AS2              0
-#define BGPDUMP_PEERTYPE_TABLE_DUMP_V2_AS4              2
+#define BGPDUMP_TYPE_TABLE_DUMP_V2                       13
+#define BGPDUMP_SUBTYPE_TABLE_DUMP_V2_PEER_INDEX_TABLE    1
+#define BGPDUMP_SUBTYPE_TABLE_DUMP_V2_RIB_IPV4_UNICAST    2
+#define BGPDUMP_SUBTYPE_TABLE_DUMP_V2_RIB_IPV4_MULTICAST  3
+#define BGPDUMP_SUBTYPE_TABLE_DUMP_V2_RIB_IPV6_UNICAST    4
+#define BGPDUMP_SUBTYPE_TABLE_DUMP_V2_RIB_IPV6_MULTICAST  5
+#define BGPDUMP_SUBTYPE_TABLE_DUMP_V2_RIB_GENERIC         6
+#define BGPDUMP_PEERTYPE_TABLE_DUMP_V2_AFI_IP             0
+#define BGPDUMP_PEERTYPE_TABLE_DUMP_V2_AFI_IP6            1
+#define BGPDUMP_PEERTYPE_TABLE_DUMP_V2_AS2                0
+#define BGPDUMP_PEERTYPE_TABLE_DUMP_V2_AS4                2
+#define BGPDUMP_TYPE_TABLE_DUMP_V2_MAX_VIEWNAME_LEN     255
 
 /* Zebra record types */
 #define BGPDUMP_TYPE_ZEBRA_BGP			16 /* MSG_PROTOCOL_BGP4MP */
@@ -130,11 +134,14 @@ typedef struct struct_BGPDUMP_MRTD_TABLE_DUMP {
 typedef struct struct_BGPDUMP_TABLE_DUMP_V2_PEER_INDEX_TABLE_ENTRY {
 	u_char              afi;
 	BGPDUMP_IP_ADDRESS  peer_ip;
+	struct in_addr      peer_bgp_id;
 	as_t                peer_as;
 } BGPDUMP_TABLE_DUMP_V2_PEER_INDEX_TABLE_ENTRY;
 
 typedef struct struct_BGPDUMP_TABLE_DUMP_V2_PEER_INDEX_TABLE {
-	uint16_t                                 peer_count;
+	struct in_addr      local_bgp_id;
+	char                view_name[BGPDUMP_TYPE_TABLE_DUMP_V2_MAX_VIEWNAME_LEN];
+	uint16_t            peer_count;
 	BGPDUMP_TABLE_DUMP_V2_PEER_INDEX_TABLE_ENTRY  *entries;
 } BGPDUMP_TABLE_DUMP_V2_PEER_INDEX_TABLE;
 
